--- a/AppControl Manager/App.xaml
+++ b/AppControl Manager/App.xaml
@@ -103,6 +103,16 @@
                 </Setter>
             </Style>
 
+
+            <!-- The styles of the Wrap Panel which is at the top of almost every page -->
+            <Style x:Key="PageHeaderWrapPanelStyle" TargetType="controls:WrapPanel">
+                <Setter Property="Grid.Row" Value="0"/>
+                <Setter Property="VerticalSpacing" Value="4"/>
+                <Setter Property="HorizontalSpacing" Value="4"/>
+                <Setter Property="Orientation" Value="Vertical"/>
+                <Setter Property="Margin" Value="6,0,6,5"/>
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
