--- a/AppControl Manager/Pages/GetSecurePolicySettings.xaml
+++ b/AppControl Manager/Pages/GetSecurePolicySettings.xaml
@@ -21,7 +21,7 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <controls:WrapPanel Grid.Row="0" VerticalSpacing="4" HorizontalSpacing="4" Orientation="Vertical" Margin="6,0,6,10">
+            <controls:WrapPanel Style="{StaticResource PageHeaderWrapPanelStyle}">
 
                 <TextBlock x:Uid="GetSecurePolicySettingsPageTitle" TextWrapping="WrapWholeWords" Style="{StaticResource BodyTextBlockStyle}" />
 
