--- a/Harden System Security/Pages/FileReputation.xaml
+++ b/Harden System Security/Pages/FileReputation.xaml
@@ -25,7 +25,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <controls:WrapPanel Grid.Row="0" VerticalSpacing="4" HorizontalSpacing="4" Orientation="Vertical" Margin="6,10,6,10">
+        <controls:WrapPanel Style="{StaticResource PageHeaderWrapPanelStyle}">
 
             <TextBlock x:Uid="FileReputationPageTitle" TextWrapping="WrapWholeWords" Style="{StaticResource BodyTextBlockStyle}" />
 
