--- a/Harden System Security/Pages/Protects/ASR.xaml
+++ b/Harden System Security/Pages/Protects/ASR.xaml
@@ -106,7 +106,7 @@
             </DataTemplate>
         </Grid.Resources>
 
-        <controls:WrapPanel Grid.Row="0" VerticalSpacing="4" HorizontalSpacing="4" Orientation="Vertical" Margin="6,0,6,10">
+        <controls:WrapPanel Style="{StaticResource PageHeaderWrapPanelStyle}">
 
             <TextBlock x:Uid="ASRRulesPageTitle" TextWrapping="WrapWholeWords" Style="{StaticResource BodyTextBlockStyle}" />
 
