--- a/Harden System Security/Pages/Protects/OptionalWindowsFeatures.xaml
+++ b/Harden System Security/Pages/Protects/OptionalWindowsFeatures.xaml
@@ -157,7 +157,7 @@
             </DataTemplate>
         </Grid.Resources>
 
-        <controls:WrapPanel Grid.Row="0" VerticalSpacing="4" HorizontalSpacing="4" Orientation="Vertical" Margin="6,0,6,10">
+        <controls:WrapPanel Style="{StaticResource PageHeaderWrapPanelStyle}">
 
             <TextBlock x:Uid="OptionalWindowsFeaturesPageTitle" TextWrapping="WrapWholeWords" Style="{StaticResource BodyTextBlockStyle}" />
 
